# Pineapple

./: .gitignore  Cargo.toml  README.md  grammar.bnf  grammer.ebnf  readme.md  test.pi  test_func.pi  test_if.pi  test_loop.pi
benchmark/: fibo.pi  fibo.py
examples/: test.pi  test_cast.pi  test_if.pi
sample_code/: test.pi  test_free.pi  test_func.pi  test_funcs.pi  test_if.pi  test_while.pi
samples/: test.pi  test_funcs.pi  test_while.pi
src/: grammer.ebnf  main.rs
src/bytecode/: chunk.rs  constant.rs  constant_pool.rs  distance.rs  distancef32.rs  distancef64.rs  instruction.rs  mod.rs  module.rs  string_intern.rs
src/cli/: mod.rs
src/compiler/: mod.rs
src/compiler/algorithm/: mod.rs  ssa.rs
src/compiler/control_flow/: basic_block.rs  dominator.rs  mod.rs
src/compiler/dominator/: algorithm.rs  mod.rs
src/compiler/flowgraph/: cfg.rs  mod.rs
src/compiler/ir/: mod.rs  ssa.rs
src/compiler/liveness_analysis/: interference_graph.rs  live_interval.rs  mod.rs  register_alloc.rs
src/compiler/optimization/: constant_optimization.rs  constant_optmization.rs  dead_code.rs  mod.rs
src/compiler/optimizer/: mod.rs
src/compiler/register_allocation/: mod.rs
src/compiler/ssa/: mod.rs
src/compiler/static_single_assignment/: mod.rs
src/compiler/three_address/: component.rs  mod.rs
src/compiler/three_address_code/: mod.rs  translate.rs
src/compiler/transformer/: linearcode.rs  mod.rs
src/core/: binop.rs  distance.rs  mod.rs  relop.rs  value.rs
src/examples/: test.pi  test_recursive.pi
src/graph/: mod.rs
src/parser/: ast.rs  binop.rs  error.rs  mod.rs  relop.rs  scanner.rs  token.rs  tokens.rs
src/pineapple_ast/: Cargo.toml
src/pineapple_ast/src/: ast.rs  lib.rs  op.rs  parser.rs
src/pineapple_codegen_bytecode/: Cargo.toml
src/pineapple_codegen_bytecode/src/: bytecode.rs  convert.rs  lib.rs  module.rs
src/pineapple_codegen_ssa/: Cargo.toml
src/pineapple_codegen_ssa/src/: convert.rs  lib.rs
src/pineapple_codegen_ssa/src/allocation/: mod.rs
src/pineapple_codegen_ssa/src/analysis/: basic_block.rs  cfg.rs  dominator.rs  mod.rs
src/pineapple_codegen_ssa/src/optimization/: mod.rs
src/pineapple_data_structures/: Cargo.toml
src/pineapple_data_structures/src/: graph.rs
src/pineapple_error/: Cargo.toml
src/pineapple_error/src/: lib.rs
src/pineapple_ir/: Cargo.toml
src/pineapple_ir/src/: lib.rs  macros.rs  op.rs  token.rs  value.rs
src/pineapple_ir/src/hir/: token.rs
src/pineapple_ir/src/mir/: mod.rs
src/pineapple_ir/src/mir/cfg/: basic_block.rs  mod.rs
src/pineapple_lexer/: Cargo.toml
src/pineapple_lexer/src/: lexer.rs  lib.rs
src/pineapple_passes/: Cargo.toml
src/pineapple_passes/src/: lib.rs
src/pineapple_semantics/: Cargo.toml
src/pineapple_semantics/src/: lib.rs  typecheck.rs
src/pineapple_session/: Cargo.toml
src/pineapple_session/src/: lib.rs  string_interner.rs  symbol_table.rs
src/pineapple_tooling/: Cargo.toml
src/pineapple_tooling/src/: cli.rs  lib.rs
src/pineapple_translation/: Cargo.toml
src/pineapple_translation/src/: convert.rs  lib.rs
src/pineapple_vm/: Cargo.toml
src/pineapple_vm/src/: callframe.rs  lib.rs  vm.rs
src/semantic_analysis/: binding.rs  error.rs  local.rs  mod.rs  typecheck.rs
src/util/: graph.rs  mod.rs  tree.rs
src/vm/: mod.rs
src/vm/memory/: function.rs  mod.rs
