[package]
name = "typed_pineapple"
version = "0.1.0"
authors = ["Matthew McMillian <matthewgmcmillian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
derive-new = "0.5.8"
lazy_static = "1.4.0"
derive_more = "0.99.9"
indexmap = "1.6.0"