[package]
authors = ["Matthew McMillian <matthewgmcmillian@gmail.com>"]
edition = "2018"
name = "pineapple"
version = "0.1.0"

[dependencies]
pineapple_ast = {path = "src/pineapple_ast"}
pineapple_data_structures = {path = "src/pineapple_data_structures"}
pineapple_error = {path = "src/pineapple_error"}
pineapple_ir = {path = "src/pineapple_ir"}
pineapple_lexer = {path = "src/pineapple_lexer"}
pineapple_passes = {path = "src/pineapple_passes"}
pineapple_semantics = {path = "src/pineapple_semantics"}
pineapple_session = {path = "src/pineapple_session"}
pineapple_tooling = {path = "src/pineapple_tooling"}
pineapple_translation = {path = "src/pineapple_translation"}
