[package]
authors = ["Matthew McMillian <matthewgmcmillian@gmail.com>"]
edition = "2018"
name = "pineapple_codegen_ssa"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pineapple_data_structures = {path = "../pineapple_data_structures"}
pineapple_ir = {path = "../pineapple_ir"}
