[package]
name = "pineapple_lexer"
version = "0.1.0"
authors = ["Matthew McMillian <matthewgmcmillian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pineapple_ir = { path = "../pineapple_ir" }
pineapple_error = { path = "../pineapple_error" }
pineapple_session = { path = "../pineapple_session" }
