[package]
authors = ["Matthew McMillian <matthewgmcmillian@gmail.com>"]
edition = "2018"
name = "pineapple_translation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pineapple_ast = { path = "../pineapple_ast" }
pineapple_ir = { path = "../pineapple_ir" }
pineapple_session = { path = "../pineapple_session" }
